# fastai-course

./: 04_nlp_transformers.ipynb  05_tabular_from_scratch.ipynb  05_tabular_not_from_scratch.ipynb  06_random_forests.ipynb  07_collaborative_filtering.ipynb  pyproject.toml
part_1/: 01_is_it_a_bird.ipynb
part_1/.ipynb_checkpoints/: 01_is_it_a_bird-checkpoint.ipynb
