[project]
name = "fast-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "duckduckgo-search>=8.0.1",
    "fastai>=2.8.1",
    "iprogress>=0.4",
    "ipywidgets>=8.1.7",
    "jupyterlab-vim>=4.1.4",
    "loguru>=0.7.3",
    "nbdev>=2.4.2",
    "numpy>=2.2.5",
    "protobuf>=6.30.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "toolz>=1.0.0",
    "transformers[sentencepiece,torch]>=4.51.3",
]
